# axiom

./: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: qevals.config.toml.template
dashboard/: app.py
data/raw/: credit_card_terms_seed.txt  emi_calculation_seed.txt  fraud_compliance_seed.txt  insurance_policy_seed.txt  loan_agreement_seed.txt
data/synthetic/: financial_eval_dataset_100.csv  financial_eval_dataset_100.json  financial_eval_dataset_2.csv  financial_eval_dataset_2.json  financial_eval_dataset_20.csv  financial_eval_dataset_20.json  financial_eval_dataset_240.csv  financial_eval_dataset_240.json  financial_eval_dataset_3.csv  financial_eval_dataset_3.json  financial_eval_dataset_5.csv  financial_eval_dataset_5.json  financial_eval_dataset_60.csv  financial_eval_dataset_60.json  generate_dataset.py
docs/: ARCHITECTURE.md  DOMAIN_SETUP.md  EXECUTION_PLAN.md  GETTING_STARTED.md  TROUBLESHOOTING.md
evals/: __init__.py  failure_analysis.py  metrics.py  pipeline.py
legacy/qevals/: .gitignore  README.md  config.py
models/: __init__.py  llm_runner.py
prompts/: advanced_prompt.txt  base_prompt.txt  improved_prompt.txt
scripts/: bootstrap.sh  download_seed_docs.py  seed_doc_sources.json  validate.sh
tests/: conftest.py  test_circuit_breaker.py  test_dashboard.py  test_dataset_generation.py  test_mock_response.py  test_orchestrator_manifest.py  test_prompts.py  test_provider_disablement.py  test_provider_health_policy.py  test_rate_limiter.py  test_reporting.py
(+23 files in other folders)
