[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-reliability-engine"
version = "0.1.0"
description = "Unified LLM reliability project combining genai_evals and qevals"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Anmol Sen" }
]
dependencies = [
  "pyyaml>=6.0.2",
  "pandas>=2.2.0",
  "streamlit>=1.44.0",
  "mlflow>=2.14.0",
  "requests>=2.32.0",
  "openai>=2.9.0",
  "anthropic>=0.75.0",
  "ollama>=0.6.1",
  "google-genai>=1.54.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.11.0",
]

[project.scripts]
lre = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.11.0",
]
